--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,30 @@
 {
-    "compilerOptions": { 
-        "target": "es2015",
-        "module": "es2015",
-        "jsx": "react",
-        "outDir": "build",
-        "rootDir": "src",
-        "allowSyntheticDefaultImports": true,
-        "noImplicitAny": false,
-        "experimentalDecorators": true,
-        "preserveConstEnums": true,
-        "allowJs": true,
-        "sourceMap": true
+      "compilerOptions": { 
+            "target": "es2015",
+            "module": "es2015",
+            "jsx": "react",
+            "outDir": "build",
+            "rootDir": "src",
+            "allowSyntheticDefaultImports": true,
+            "noImplicitAny": false,
+            "experimentalDecorators": true,
+            "preserveConstEnums": true,
+            "allowJs": true,
+            "sourceMap": true,
+            "baseUrl": ".",
+            "paths": {
+                  "redux-thunk": ["./node_modules/redux-thunk/index.d.ts"],
+                  "redux-persist":["./node_modules/redux-persist/lib/index.d.ts"]
+
+            }
   },
   "exclude": [
-        "index.android.js",
-        "index.ios.js",
-        "build",
-        "app",
-        "node_modules",
-        "__tests__"
+      "index.android.js",
+      "index.ios.js",
+      "build",
+      "app",
+      "node_modules",
+      "__tests__"
   ],
   "compileOnSave": true 
 }
