--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/react": "^15.0.24",
     "@types/react-native": "^0.44.1",
+    "@types/react-redux": "^4.4.40",
     "@types/redux": "^3.6.31",
     "@types/redux-logger": "^3.0.0",
     "@types/redux-persist": "^4.3.1",
