--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-react-native": "1.9.2",
     "jest": "20.0.1",
     "react-test-renderer": "16.0.0-alpha.6",
+    "redux-logger": "^3.0.6",
     "typescript": "^2.3.2"
   },
   "jest": {
