--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "loadash": "0.0.1",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
+    "react-native-blur": "^3.0.0-alpha",
     "react-native-code-push": "^2.0.0-beta",
     "react-native-maps": "^0.15.1",
     "react-native-orientation": "git+https://git@github.com/yamill/react-native-orientation.git",
