--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "loadash": "0.0.1",
+    "node": "0.0.0",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-code-push": "^2.0.0-beta",
@@ -23,6 +24,7 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "@types/node": "^7.0.27",
     "@types/react": "^15.0.24",
     "@types/react-native": "^0.44.1",
     "@types/react-redux": "^4.4.40",
