React-navigation hirachy: index.android -> App (component) -> Provider (with store) -> ConnectedNav ->  AppWithNavigationState -> AppNavigator -> Screens. It's not investigated how to properly connect Navigation to redux and how to use it (files navReducer.js and appNavigator.js). RNRF removed. Native Drawer is used due to issues with rounded corners and incorrect animation of map heigth. Drawer consists of control panel.js, drawer.js, mainscreen.js with map. Keystore added and build.gradle, gradle.properties files are updated to build release version.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -90,7 +90,7 @@ android {
     defaultConfig {
         applicationId "com.taxiapp"
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
         ndk {
@@ -117,6 +117,7 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+			signingConfig signingConfigs.release
         }
     }
     // applicationVariants are e.g. debug, release
