react-native-intractable for gestures (linking), gradle version upgrade

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-code-push": "^2.0.0-beta",
+    "react-native-interactable": "0.0.9",
     "react-native-orientation": "git+https://git@github.com/yamill/react-native-orientation.git",
     "react-native-router-flux": "3.38.0",
     "react-native-svg": "5.1.8",
