--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-interactable": "0.0.9",
     "react-native-orientation": "git+https://git@github.com/yamill/react-native-orientation.git",
     "react-native-router-flux": "3.38.0",
+    "react-native-shadow": "^1.1.2",
     "react-native-svg": "5.1.8",
     "react-native-swipe-gestures": "^1.0.2",
     "react-navigation": "^1.0.0-beta.11",
